# AutoDock4

./: .project  .readPDBQ.cc.swp  AD4_recompile.README  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.am.sav  Makefile.in  Makefile.pre-autoconf  NOTES  NOTES_xml.txt  PDBQT_tokens.h  README  RELEASENOTES  alea.cc  alea.h  analysis.cc  analysis.h  atom_parameter_manager.cc  autocomm.h  autodock3.1  autoglobal.h  banner.cc  banner.h  bestpdb.cc  bestpdb.h  calculateEnergies.cc  calculateEnergies.h  call_cpso.cc  call_cpso.h  call_glss.cc  call_glss.h  call_gs.cc  call_gs.h  call_gs.orig.cc  call_ls.cc  call_ls.h  changeState.cc  changeState.h  (+217 more)
AutoDock.xcode/: garrett.pbxuser  project.pbxproj
Tests/: 1aot_targetatomparameterWmissing.dpf  1aot_targetfileempty.dpf  1aot_targetfilemissing.dpf  1aot_targetfilemultiple.dpf  1aot_targetnamemissing.dpf  1pgp.dpf  1pgp.gpf  1pgp_1_4_100.dpf  1pgp_1_4_50.dpf  1pgp_about_auto_gals.dpf  1pgp_about_only.dpf  1pgp_epdb_etables_flexres_intelec.dpf  1pgp_epdb_flexres_flex_renum_bad.dpf  1pgp_epdb_flexres_lig_3torsdofs_intelec.dpf  1pgp_epdb_flexres_lig_notorsdof_intelec.dpf  1pgp_epdb_flexres_lig_renum_bad.dpf  1pgp_epdb_flexres_renum_intelec.dpf  1pgp_epdb_lig_renum_bad.dpf  1pgp_flex_renum.pdbqt  1pgp_flex_renum_bad.pdbqt  1pgp_flex_torsdof.pdbqt  1pgp_flexlig_pso_ls1_psw1.dpf  1pgp_flexres.dpf  1pgp_flexres_1_4_100.dpf  1pgp_flexres_1_4_50.dpf  1pgp_flexres_emptyligand.dpf  1pgp_ga_run_maxruns.dpf  1pgp_ga_run_maxruns_analysis.dpf  1pgp_ga_select_linear_ranking.dpf  1pgp_ga_select_tournament.dpf  1pgp_gals_10runs.dpf  (+36 more)
(+133 files in other folders)
